--- a/src/styles/animation.css
+++ b/src/styles/animation.css
@@ -3,7 +3,8 @@
 
 .icon-bob-talk {
     display: inline-block;
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
+    /*background-image: url('../../dist/images/spritesheets/sprite-base.png');*/
     width: 52px;
     height: 152px;
 	animation: bob-talk 0.5s steps(2) infinite;
@@ -20,7 +21,7 @@
 
 .icon-sheffer-walk{
     display: inline-block;
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
     width: 56px;
     height: 164px;
 	animation: sheffer-walk 0.35s steps(2) infinite;
@@ -38,7 +39,7 @@
 
 .icon-sheffer-talk {
     display: inline-block;
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
     width: 60px;
     height: 164px;
 	animation: sheffer-talk 0.5s steps(2) infinite;
@@ -56,7 +57,7 @@
 
 .icon-billy-talk {
     display: inline-block;
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
     width: 72px;
     height: 126px;
 	animation: billy-talk 0.5s steps(2) infinite;
@@ -76,7 +77,7 @@
 
 .icon-billy-walk{
     display: inline-block;
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
     width: 72px;
     height: 132px;
 	animation: billy-walk 0.35s steps(2) infinite;
@@ -92,7 +93,7 @@
 }
 
 .icon-billy-fall {
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
     background-position: -1346px 0px;
 	width: 72px;
 	height: 74px;
@@ -115,7 +116,7 @@
 
 .icon-randy-walk{
     display: inline-block;
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
 	animation: randy-walk 0.35s steps(2) infinite;
 }
 
@@ -134,7 +135,7 @@
 
 
 .icon-randy-fall {
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
     background-position: -1640px 0px;
     width: 76px;
     height: 58px;
@@ -158,7 +159,7 @@
 
 .icon-randy-talk{
     display: inline-block;
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
     width: 76px;
     height: 150px;
 	animation: randy-talk 0.5s steps(2) infinite;
@@ -176,7 +177,7 @@
 
 
 .icon-mark-fall {
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
     background-position: -2096px 0px;
     width: 76px;
     height: 54px;
@@ -202,7 +203,7 @@
     display: inline-block;
     width: 80px;
     height: 150px;
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
 	animation: bob-walk 0.35s steps(2) infinite;
 }
 
@@ -220,7 +221,7 @@
     display: inline-block;
     width: 82px;
     height: 146px;
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
 	animation: mark-walk 0.35s steps(2) infinite;
 }
 
@@ -236,7 +237,7 @@
 
 .icon-mark-talk{
     display: inline-block;
-    background-image: url('../../dist/images/spritesheets/sprite-base.png');
+    background-image: url('../images/misc/sprite-base.png');
     width: 82px;
     height: 146px;
 	animation: mark-talk 0.5s steps(2) infinite;
