--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -1,13 +1,18 @@
 .canvas{
 	margin: auto;
-	position: relative;
-	width: calc(800px * 0.75);
-	height: calc(600px * 0.85);
+	position: fixed;
+	width: calc(800px * 0.75 * 1.25);
+	height: calc(600px * 0.85 * 1.25);
 	overflow: hidden;
-	outline: 1px solid mistyrose;
+	// outline: 1px solid mistyrose;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: contain;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+
 }
 
 .canvas-light{
@@ -28,4 +33,8 @@
 
 .canvas-foul{
 	background-image: url('../images/misc/background-foul.png');
+}
+
+.canvas-options{
+	background-image: url('../images/misc/main-background.jpeg');
 }
