--- a/src/styles/prompts.scss
+++ b/src/styles/prompts.scss
@@ -1,3 +1,4 @@
+$mainFont: monospace;
 
 .winLose{
 	visibility: hidden;
@@ -6,8 +7,9 @@
 	left: 50%;
 	top: 25%;
 	font-size: 20px;
-	font-family: homesteadInline;
-	line-height: calc(68px * 1);
+	// font-family: homesteadInline;
+	font-family: monospace;
+	line-height: 68px;
 	text-align: center;
 
 	width: calc(130px * 1.3);
@@ -17,6 +19,30 @@
 
 }
 
+.blinkBodyPartsScore{
+	animation: pulse 0.5s linear;
+}
+
+@keyframes pulse{
+	0%{
+		transform: scale(1);
+	}
+	20%{
+		transform: scale(1.2);
+	}
+	40%{
+		transform: scale(0.8);
+	}
+	60%{
+		transform: scale(1.1);
+	}
+	80%{
+		transform: scale(0.9);
+	}
+	100%{
+		transform: scale(1);
+	}
+}
 
 
 
@@ -24,11 +50,13 @@
 	position: absolute;
 	top: -40%;
 	left: -40%;
-	font-size: calc(13px * 0.8);
-	line-height: calc(54px * 0.7);
+	font-size: calc(13px * 0.7);
+	line-height: 38px;
 	text-align: center;
 	visibility: hidden;
-	font-family: homestead;
+	font-weight: bold;
+	// font-family: homestead;
+	font-family: monospace;
 
 	width: calc(116px * 0.7);
 	height: calc(68px * 0.7);
@@ -38,11 +66,16 @@
 
 
 
+
 .lives{
 	position: absolute;
-	font-size: 30px;
+	font-size: 20px;
 	left: 40%;
-	font-family: homestead;
+	top: 4.5%;
+
+	// font-family: homestead;
+	font-family: monospace;
+
 	color: green;
 }
 
@@ -50,25 +83,37 @@
 .points {
 	position: absolute;
 	right: 0%;
-	font-family: homestead;
+	// font-family: homestead;
+	font-family: monospace;
+
 	color:green;
-	font-size: 30px;
+	font-size: 20px;
+	top: 4.5%;
+	right: 5%;
 }
 
 
-.myStats, .opponentStats{
-	font-family: homestead;
-	font-size: 30px;
+
+
+.gameTime{
+	// font-family: homestead;
+	font-family: monospace;
+
+	font-size: 20px;
 	color: green;
 	position: absolute;
+	left: 5%;
+	top: 4.5%;
 }
 
 
-.opponentStats{
-	position: absolute;
-	// display: block;
-	font-size: 20px;
+.oppEndTimes{
+	// font-family: homestead;
+	font-family: monospace;
 
+	color: green;
+	position: absolute;
+	font-size: 20px;
 	width:100%;
 	bottom:2%;
 }
@@ -77,7 +122,7 @@
 	position: absolute;
 	bottom: 1%;
 	transform: translate(-50%, 0);
-	// bottom: 13%;
+	height: 50px;
 }
 
 strike{
